# search_work

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  automation.py  chat.py  deps.py  profile.py  resumes.py  search.py  settings.py  vacancies.py
backend/app/models/: __init__.py  interview.py  profile.py  resume.py  settings.py  user.py  vacancy.py
backend/app/schemas/: __init__.py  auth.py  chat.py  profile.py  resume.py  settings.py  vacancy.py
backend/app/services/: __init__.py  automation.py  cover_letter.py  github_analyzer.py  hh_client.py  interview.py  resume_generator.py  vacancy_analyzer.py
backend/app/services/llm/: __init__.py  base.py  claude.py  openai.py  prompts.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: auth.ts  automation.ts  chat.ts  client.ts  profile.ts  resumes.ts  search.ts  settings.ts  vacancies.ts
frontend/src/components/chat/: ChatContainer.vue  ChatInput.vue  ChatMessage.vue
frontend/src/components/common/: AppSidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chat.ts  profile.ts  vacancies.ts
frontend/src/types/: index.ts
frontend/src/views/: AutomationView.vue  ChatView.vue  ProfileView.vue  ResumeView.vue  SearchView.vue  SettingsView.vue  VacanciesView.vue
